--- a/.github/workflows/app01.yml
+++ b/.github/workflows/app01.yml
@@ -18,8 +18,6 @@ env:
   TF_VAR_CLIENT: ${{ secrets.ARM_CLIENT_ID }}
   TF_VAR_SUB_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
   TF_VAR_TENANT: ${{ secrets.ARM_TENANT_ID }}
-  TF_VAR_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-  ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
 
 
 jobs:
@@ -48,8 +46,8 @@ jobs:
       - name: Log in with Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          client-id: ${{ secrets.ARM_CLIENT_ID }}
+          tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Setup terraform
