--- a/.github/workflows/app01.yml
+++ b/.github/workflows/app01.yml
@@ -46,9 +46,9 @@ jobs:
       - name: Log in with Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: '37508c2f-633b-4c3a-bf76-62f741b97b4b'
+          tenant-id: '680f956b-1eaf-4bb1-a703-24b289ea568f'
+          subscription-id: 'ce326908-2fd8-4d82-aa1f-106533ca8b6a'
 
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v2
