--- a/.github/workflows/app01.yml
+++ b/.github/workflows/app01.yml
@@ -55,6 +55,7 @@ jobs:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          auth-type: SERVICE_PRINCIPAL
 
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v2
