--- a/.github/workflows/app01.yml
+++ b/.github/workflows/app01.yml
@@ -33,6 +33,7 @@ jobs:
       AZURE_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
       TF_VAR_STORAGE_ACCOUNT: 'vishnudemo9934'
       TF_VAR_STORAGE_CONTAINER: 'test'
+      ARM_ACCESS_KEY: ${{ secrets.ARM_ACCESS_KEY }}
 
     steps:
       - name: Checkout the code
@@ -55,7 +56,6 @@ jobs:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          auth-type: SERVICE_PRINCIPAL
 
       - name: Setup terraform
         uses: hashicorp/setup-terraform@v2
