--- a/.github/workflows/app01.yml
+++ b/.github/workflows/app01.yml
@@ -25,7 +25,7 @@ permissions:
 jobs:
   analysis:
     name: Analyse the Terraform
-    environment: dev
+    environment: dev_rajul
     runs-on: ubuntu-latest
     env:
       AZURE_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
